--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "format:check": "prettier --check --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "lint": "turbo lint",
+    "prepare": "husky install",
     "test": "turbo test",
     "test:watch": "turbo test:watch"
   },
@@ -17,6 +18,7 @@
     "@myzenbuddy/config-prettier": "workspace:*",
     "@myzenbuddy/config-tsconfig": "workspace:*",
     "eslint": "^8.55.0",
+    "husky": "^8.0.0",
     "prettier": "^3.1.0",
     "turbo": "^1.10.16"
   },
