--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "husky": "^8.0.0",
     "prettier": "^3.1.0",
     "tsup": "^8.0.1",
-    "turbo": "^1.10.16"
+    "turbo": "^1.10.16",
+    "vitest": "^0.34.6"
   },
   "packageManager": "pnpm@8.11.0",
   "engines": {
