--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "^3.1.0",
     "tsup": "^8.0.1",
     "turbo": "^1.10.16",
+    "vite": "^5.0.4",
     "vitest": "^0.34.6"
   },
   "packageManager": "pnpm@8.11.0",
