--- a/packages/tsconfig-config/tsconfig.base.json
+++ b/packages/tsconfig-config/tsconfig.base.json
@@ -1,20 +1,20 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "composite": false,
     "declaration": true,
     "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "inlineSources": false,
     "isolatedModules": true,
-    "moduleResolution": "node",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "preserveWatchOutput": true,
     "skipLibCheck": true,
     "strict": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "preserveSymlinks": true,
+    "moduleResolution": "node"
   },
   "exclude": ["node_modules", "dist"]
 }
