WIP for database bits

--- a/packages/tsconfig-config/tsconfig.base.json
+++ b/packages/tsconfig-config/tsconfig.base.json
@@ -18,7 +18,8 @@
     "moduleResolution": "node",
     "target": "ESNext",
     "module": "ESNext",
-    "lib": ["ESNext", "DOM"]
+    "lib": ["ESNext", "DOM"],
+    "types": ["node", "vitest/globals"]
   },
   "exclude": ["node_modules", "dist"]
 }
