--- a/packages/database-services/package.json
+++ b/packages/database-services/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "vitest run"
   },
   "dependencies": {
     "@myzenbuddy/database-core": "*",
