--- a/packages/tsconfig-config/tsconfig.base.json
+++ b/packages/tsconfig-config/tsconfig.base.json
@@ -1,21 +1,21 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    "sourceMap": true,
+    "inlineSources": true,
     "declaration": true,
     "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "inlineSources": false,
-    "isolatedModules": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "preserveWatchOutput": true,
-    "skipLibCheck": true,
     "strict": true,
     "strictNullChecks": true,
     "preserveSymlinks": true,
+    "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "target": "ESNext",
     "module": "ESNext",
     "lib": ["ESNext", "DOM"],
