--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "build": "turbo build --no-daemon",
     "clean": "pnpm dlx rimraf --glob **/node_modules --glob **/.turbo --glob **/dist",
-    "dev": "turbo dev --filter='./apps/*'",
+    "dev": "turbo dev --no-daemon --filter='./apps/*'",
     "format": "prettier --write --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "format:check": "prettier --check --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
-    "lint": "turbo lint",
+    "lint": "turbo lint --no-daemon",
     "prepare": "husky install",
-    "test": "turbo test",
-    "test:watch": "turbo test:watch",
+    "test": "turbo test --no-daemon",
+    "test:watch": "turbo test:watch --no-daemon",
     "turbo:clean": "pnpx turbo daemon clean"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "@myzenbuddy/eslint-config": "workspace:*",
     "@myzenbuddy/prettier-config": "workspace:*",
     "@myzenbuddy/tsconfig-config": "workspace:*",
+    "@swc/core": "^1.3.100",
     "@types/node": "^20.10.2",
     "eslint": "^8.55.0",
     "husky": "^8.0.0",
