--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@myzenbuddy/tsconfig-config": "workspace:*",
     "@swc/core": "^1.3.100",
     "@types/node": "^20.10.2",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.55.0",
     "husky": "^8.0.0",
     "prettier": "^3.1.0",
