--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -46,7 +46,11 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@myzenbuddy/tailwind-config": "workspace:*",
     "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14"
+    "@types/react-dom": "18.2.14",
+    "autoprefixer": "^10.4.16",
+    "postcss": "8.4.21",
+    "tailwindcss": "^3.3.5"
   }
 }
