--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -11,7 +11,8 @@
         "types": "./dist/index.d.ts",
         "default": "./dist/index.js"
       }
-    }
+    },
+    "./styles.css": "./dist/index.css"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -48,7 +49,11 @@
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@myzenbuddy/tailwind-config": "workspace:*",
     "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14"
+    "@types/react-dom": "18.2.14",
+    "autoprefixer": "^10.4.16",
+    "postcss": "8.4.21",
+    "tailwindcss": "^3.3.5"
   }
 }
