--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,6 +6,7 @@
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "vite": "^5.0.4",
     "vitest": "^0.34.6"
   }
