--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
         run: cp -f .env.local.example .env.local
 
       - name: Docker compose - Build & start the containers
-        run: docker compose up -d
+        run: docker compose --file docker/compose.yaml up -d
 
       - name: pnpm - Setup
         uses: pnpm/action-setup@v2
