--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,7 +23,8 @@
     "build": "vite build",
     "dev": "vite",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "serve dist --cors --single --listen 4200"
   },
   "dependencies": {
     "@myzenbuddy/web-core": "*",
@@ -32,6 +33,7 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "serve": "^14.2.1",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7"
   },
