--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "scripts": {
     "build": "turbo build --no-daemon",
     "clean": "pnpm dlx rimraf --glob **/node_modules --glob **/.turbo --glob **/dist",
-    "dev": "turbo dev --no-daemon --concurrency=50",
-    "e2e": "turbo e2e --no-daemon",
-    "e2e:watch": "turbo e2e:watch --no-daemon",
+    "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50",
+    "e2e": "cross-env NODE_ENV=test turbo e2e --no-daemon",
+    "e2e:watch": "cross-env NODE_ENV=test turbo e2e:watch --no-daemon",
     "format": "prettier --write --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "format:check": "prettier --check --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "lint": "turbo lint --no-daemon",
     "prepare": "husky install",
-    "test": "turbo test --no-daemon",
-    "test:watch": "turbo test:watch --no-daemon",
+    "test": "cross-env NODE_ENV=test turbo test --no-daemon",
+    "test:watch": "cross-env NODE_ENV=test turbo test:watch --no-daemon",
     "turbo:clean": "pnpx turbo daemon clean"
   },
   "dependencies": {
@@ -26,6 +26,7 @@
     "@swc/core": "^1.3.100",
     "@types/node": "^20.10.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.55.0",
     "husky": "^8.0.0",
     "prettier": "^3.1.0",
