--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,9 @@ jobs:
       - name: pnpm - Build
         run: pnpm build
 
+      - name: pnpm - CLI - Database Reload
+        run: pnpm cli database:reload
+
       - name: pnpm - Test
         run: pnpm test
 
