--- a/turbo.json
+++ b/turbo.json
@@ -1,13 +1,15 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalEnv": ["CI", "NODE_ENV"],
   "pipeline": {
-    "//#format": {
-      "cache": false
-    },
-    "//#format:check": {},
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
+    },
+    "dev": {
+      "cache": false,
+      "persistent": true,
+      "dependsOn": ["^build"]
     },
     "lint": {},
     "test": {
@@ -19,11 +21,6 @@
     "e2e": {},
     "e2e:watch": {
       "cache": false
-    },
-    "dev": {
-      "cache": false,
-      "persistent": true,
-      "dependsOn": ["^build"]
     }
   }
 }
