--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "build": "turbo build --no-daemon",
     "clean": "pnpm dlx rimraf --glob **/node_modules --glob **/.turbo --glob **/dist",
     "cli": "cd apps/cli && pnpm build && pnpm run-exec",
+    "database:check": "cd ./packages/database-core && pnpm scripts:check",
+    "database:generate-migration": "cd ./packages/database-core && pnpm scripts:generate-migration",
+    "database:update-metadata": "cd ./packages/database-core && pnpm scripts:update-metadata",
     "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50",
     "e2e": "cross-env NODE_ENV=test turbo e2e --no-daemon",
     "e2e:watch": "cross-env NODE_ENV=test turbo e2e:watch --no-daemon",
