--- a/packages/database-core/package.json
+++ b/packages/database-core/package.json
@@ -21,8 +21,11 @@
   ],
   "scripts": {
     "build": "tsup",
-    "dev": "tsup --watch",
-    "lint": "eslint ."
+    "dev": "tsup --watch --onSuccess \"tsc --emitDeclarationOnly --declaration\"",
+    "lint": "eslint .",
+    "scripts:check": "pnpm exec drizzle-kit check:pg --config=./src/drizzle.config.ts",
+    "scripts:generate-migration": "pnpm exec drizzle-kit generate:pg --config=./src/drizzle.config.ts",
+    "scripts:update-metadata": "pnpm exec drizzle-kit up:pg --config=./src/drizzle.config.ts"
   },
   "dependencies": {
     "@myzenbuddy/shared-backend": "*",
@@ -33,6 +36,7 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
-    "@types/pg": "^8.10.9"
+    "@types/pg": "^8.10.9",
+    "typescript": "^5.3.2"
   }
 }
