--- a/packages/shared-backend/package.json
+++ b/packages/shared-backend/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
     "app-root-path": "^3.1.0",
@@ -30,6 +31,7 @@
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2"
+    "@types/bcrypt": "^5.0.2",
+    "typescript": "^5.3.2"
   }
 }
