--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,7 +24,8 @@
     "dev": "tsup --watch --onSuccess \"node dist/main.js\"",
     "lint": "eslint .",
     "serve": "node ./dist/main.js",
-    "test": "vitest run"
+    "test": "vitest run",
+    "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
     "@myzenbuddy/database-core": "*",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/supertest": "^2.0.16"
+    "@types/supertest": "^2.0.16",
+    "typescript": "^5.3.2"
   }
 }
