--- a/packages/database-fixtures/package.json
+++ b/packages/database-fixtures/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
     "@myzenbuddy/database-core": "*",
@@ -30,5 +31,8 @@
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "drizzle-orm": "^0.29.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.2"
   }
 }
