--- a/packages/database-seeds/package.json
+++ b/packages/database-seeds/package.json
@@ -22,11 +22,15 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
     "@myzenbuddy/database-core": "*",
     "@myzenbuddy/shared-backend": "*",
     "drizzle-orm": "^0.29.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.2"
   }
 }
