--- a/packages/shared-common/package.json
+++ b/packages/shared-common/package.json
@@ -22,10 +22,14 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.2"
   }
 }
