--- a/packages/shared-frontend/package.json
+++ b/packages/shared-frontend/package.json
@@ -22,6 +22,10 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.2"
   }
 }
