--- a/packages/shared-logging/package.json
+++ b/packages/shared-logging/package.json
@@ -22,12 +22,16 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
     "@myzenbuddy/shared-backend": "workspace:*",
     "dotenv": "^16.3.1",
     "pino": "^8.16.2",
     "pino-pretty": "^10.2.3"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.2"
   }
 }
