--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -23,7 +23,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -54,6 +55,7 @@
     "@types/react-dom": "18.2.14",
     "autoprefixer": "^10.4.16",
     "postcss": "8.4.21",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.3.2"
   }
 }
