--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "database:check": "cd ./packages/database-core && pnpm scripts:check",
     "database:generate-migration": "cd ./packages/database-core && pnpm scripts:generate-migration",
     "database:update-metadata": "cd ./packages/database-core && pnpm scripts:update-metadata",
-    "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50",
+    "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --parallel",
     "e2e": "cross-env NODE_ENV=test turbo e2e --no-daemon",
     "e2e:watch": "cross-env NODE_ENV=test turbo e2e:watch --no-daemon",
     "format": "prettier --write --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
@@ -34,6 +34,7 @@
     "eslint": "^8.55.0",
     "husky": "^8.0.0",
     "prettier": "^3.1.0",
+    "syncpack": "^11.2.1",
     "tsup": "^8.0.1",
     "turbo": "^1.10.16",
     "vite": "^5.0.4",
