--- a/turbo.json
+++ b/turbo.json
@@ -8,8 +8,7 @@
     },
     "dev": {
       "cache": false,
-      "persistent": true,
-      "dependsOn": ["^build"]
+      "persistent": true
     },
     "lint": {},
     "test": {
