More work on server and clean

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -21,6 +21,7 @@
   ],
   "scripts": {
     "build": "tsup",
+    "clean": "pnpm dlx rimraf --glob node_modules --glob .turbo --glob dist",
     "lint": "eslint .",
     "run-exec": "node ./dist/main.js"
   },
