--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -22,6 +22,7 @@
   ],
   "scripts": {
     "build": "tsup",
+    "clean": "pnpm dlx rimraf --glob node_modules --glob .turbo --glob dist",
     "dev": "tsup --watch",
     "lint": "eslint .",
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
