--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,6 +21,7 @@
   ],
   "scripts": {
     "build": "tsup",
+    "clean": "pnpm dlx rimraf --glob node_modules --glob .turbo --glob dist",
     "dev": "tsup --watch --onSuccess \"node dist/main.js\"",
     "lint": "eslint .",
     "serve": "node ./dist/main.js",
