--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "build": "turbo build --no-daemon",
-    "clean": "pnpm dlx rimraf --glob **/node_modules --glob **/.turbo --glob **/dist",
+    "clean": "turbo clean --no-daemon --parallel",
+    "clean:all": "pnpm dlx rimraf --glob **/node_modules --glob **/.turbo --glob **/dist",
     "cli": "cd apps/cli && pnpm build && pnpm run-exec",
     "database:check": "cd ./packages/database-core && pnpm scripts:check",
     "database:generate-migration": "cd ./packages/database-core && pnpm scripts:generate-migration",
@@ -16,6 +17,7 @@
     "format:check": "prettier --check --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "lint": "turbo lint --no-daemon",
     "prepare": "husky install",
+    "serve": "turbo serve --no-daemon",
     "test": "cross-env NODE_ENV=test turbo test --no-daemon",
     "test:watch": "cross-env NODE_ENV=test turbo test:watch --no-daemon",
     "turbo:clean": "pnpx turbo daemon clean"
