--- a/packages/shared-common/package.json
+++ b/packages/shared-common/package.json
@@ -21,6 +21,7 @@
   ],
   "scripts": {
     "build": "tsup",
+    "clean": "pnpm dlx rimraf --glob node_modules --glob .turbo --glob dist",
     "dev": "tsup --watch",
     "lint": "eslint .",
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
