--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "serve": "serve dist --cors --single --listen 4200"
   },
   "dependencies": {
+    "@myzenbuddy/tsconfig-config": "workspace:*",
     "@myzenbuddy/web-core": "*",
     "@nx/react": "17.1.3",
     "autoprefixer": "^10.4.16",
