--- a/packages/shared-logging/package.json
+++ b/packages/shared-logging/package.json
@@ -15,6 +15,7 @@
   },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
+  "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "files": [
     "dist/**"
