--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,18 +29,19 @@ jobs:
         with:
           run_install: false
 
-      - name: pnpm - Store path
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      # TODO: not working with cypress at the moment
+      #      - name: pnpm - Store path
+      #        shell: bash
+      #        run: |
+      #          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
-      - name: pnpm - Setup Cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+      #      - name: pnpm - Setup Cache
+      #        uses: actions/cache@v3
+      #        with:
+      #          path: ${{ env.STORE_PATH }}
+      #          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+      #          restore-keys: |
+      #            ${{ runner.os }}-pnpm-store-
 
       - name: pnpm - Install
         run: pnpm install
