--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
       #            ${{ runner.os }}-pnpm-store-
 
       - name: pnpm - Install
-        run: pnpm install
+        run: pnpm install --ignore-scripts
 
       - name: pnpm - Lint
         run: pnpm lint
