--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,6 @@ jobs:
     name: Test and Benchmark
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    env:
-      DISABLE_OPENCOLLECTIVE: true
     steps:
       - name: Git - Checkout
         uses: actions/checkout@v4
@@ -49,7 +47,7 @@ jobs:
       # Tried disabling post-install scripts, but that causes another issue with bcrypt dependency down the line.
       - name: pnpm - Workaround
         run: |
-          pnpm add -g opencollective-postinstall
+          pnpm add -g node-gyp opencollective
 
       - name: pnpm - Install
         run: pnpm install
