E2e + some lother eslint fixes in react

--- a/packages/tsconfig-config/tsconfig.backend.json
+++ b/packages/tsconfig-config/tsconfig.backend.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
+    "preserveSymlinks": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   }
