Move API url into shared common library, redirect user to login after logged in and other smaller tweaks

--- a/packages/database-services/package.json
+++ b/packages/database-services/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@myzenbuddy/database-core": "*",
     "@myzenbuddy/database-testing": "*",
+    "@myzenbuddy/emails-mailer": "*",
     "@myzenbuddy/shared-backend": "*",
     "@myzenbuddy/shared-common": "*",
     "date-fns": "^2.30.0",
