--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-serve-static-core": "^4.17.41",
     "@types/supertest": "^2.0.16",
     "typescript": "^5.3.2"
   }
