--- a/turbo.json
+++ b/turbo.json
@@ -2,6 +2,9 @@
   "$schema": "https://turbo.build/schema.json",
   "globalEnv": ["CI", "NODE_ENV"],
   "pipeline": {
+    "topo": {
+      "dependsOn": ["^topo"]
+    },
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
@@ -24,12 +27,11 @@
     "test:watch": {
       "cache": false
     },
-    "e2e": {},
+    "e2e": {
+      "dependsOn": ["build"]
+    },
     "e2e:watch": {
       "cache": false
-    },
-    "topo": {
-      "dependsOn": ["^topo"]
     }
   }
 }
