--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "database:check": "cd ./packages/database-core && pnpm scripts:check",
     "database:generate-migration": "cd ./packages/database-core && pnpm scripts:generate-migration",
     "database:update-metadata": "cd ./packages/database-core && pnpm scripts:update-metadata",
-    "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --parallel",
-    "e2e": "cross-env NODE_ENV=test turbo e2e --no-daemon",
-    "e2e:watch": "cross-env NODE_ENV=test turbo e2e:watch --no-daemon",
+    "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50",
+    "e2e": "cross-env NODE_ENV=test turbo e2e --no-daemon --concurrency=1",
+    "e2e:watch": "cross-env NODE_ENV=test turbo e2e:watch --no-daemon --concurrency=1",
     "format": "prettier --write --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "format:check": "prettier --check --no-error-on-unmatched-pattern \"./{apps,packages}/**/*.{ts,tsx}\" \"./**/*.json\"",
     "lint": "turbo lint --no-daemon",
     "prepare": "husky install",
     "serve": "turbo serve --no-daemon",
-    "test": "cross-env NODE_ENV=test turbo test --no-daemon",
+    "test": "cross-env NODE_ENV=test turbo test --no-daemon --concurrency=1",
     "test:watch": "cross-env NODE_ENV=test turbo test:watch --no-daemon",
     "turbo:clean": "pnpx turbo daemon clean"
   },
