--- a/packages/shared-backend/package.json
+++ b/packages/shared-backend/package.json
@@ -25,11 +25,12 @@
   },
   "dependencies": {
     "app-root-path": "^3.1.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "typescript": "^5.3.2"
   }
 }
