Fixes on workspace bits (* renamed to workspace:*) and implemented cypress email testing

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,13 +26,14 @@
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
-    "@myzenbuddy/database-core": "*",
-    "@myzenbuddy/database-fixtures": "*",
-    "@myzenbuddy/database-seeds": "*",
-    "@myzenbuddy/database-services": "*",
-    "@myzenbuddy/database-testing": "*",
-    "@myzenbuddy/shared-backend": "*",
-    "@myzenbuddy/shared-common": "*",
+    "@myzenbuddy/database-core": "workspace:*",
+    "@myzenbuddy/database-fixtures": "workspace:*",
+    "@myzenbuddy/database-seeds": "workspace:*",
+    "@myzenbuddy/database-services": "workspace:*",
+    "@myzenbuddy/database-services-testing": "workspace:*",
+    "@myzenbuddy/database-testing": "workspace:*",
+    "@myzenbuddy/shared-backend": "workspace:*",
+    "@myzenbuddy/shared-common": "workspace:*",
     "@myzenbuddy/tsconfig-config": "workspace:*",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
