--- a/packages/database-core/package.json
+++ b/packages/database-core/package.json
@@ -27,8 +27,8 @@
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
-    "@myzenbuddy/shared-backend": "*",
-    "@myzenbuddy/shared-common": "*",
+    "@myzenbuddy/shared-backend": "workspace:*",
+    "@myzenbuddy/shared-common": "workspace:*",
     "drizzle-kit": "^0.20.4",
     "drizzle-orm": "^0.29.0",
     "drizzle-zod": "^0.5.1",
