--- a/packages/database-fixtures/package.json
+++ b/packages/database-fixtures/package.json
@@ -24,8 +24,8 @@
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
-    "@myzenbuddy/database-core": "*",
-    "@myzenbuddy/shared-backend": "*",
+    "@myzenbuddy/database-core": "workspace:*",
+    "@myzenbuddy/shared-backend": "workspace:*",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "drizzle-orm": "^0.29.0"
