--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -29,10 +29,10 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "3.2.2",
-    "@myzenbuddy/shared-common": "*",
-    "@myzenbuddy/shared-frontend": "*",
+    "@myzenbuddy/shared-common": "workspace:*",
+    "@myzenbuddy/shared-frontend": "workspace:*",
     "@myzenbuddy/tsconfig-config": "workspace:*",
-    "@myzenbuddy/web-ui": "*",
+    "@myzenbuddy/web-ui": "workspace:*",
     "@radix-ui/react-popover": "^1.0.7",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
