--- a/packages/database-core/package.json
+++ b/packages/database-core/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@myzenbuddy/shared-backend": "workspace:*",
     "@myzenbuddy/shared-common": "workspace:*",
+    "@myzenbuddy/shared-logging": "workspace:*",
     "drizzle-kit": "^0.20.4",
     "drizzle-orm": "^0.29.0",
     "drizzle-zod": "^0.5.1",
