--- a/packages/database-seeds/package.json
+++ b/packages/database-seeds/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@myzenbuddy/database-core": "workspace:*",
     "@myzenbuddy/shared-backend": "workspace:*",
+    "@myzenbuddy/shared-logging": "workspace:*",
     "drizzle-orm": "^0.29.0"
   },
   "devDependencies": {
