--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "turbo clean --no-daemon --parallel",
     "cli": "pnpm build && cd apps/cli && pnpm run-exec",
     "database:check": "cd ./packages/database-core && pnpm scripts:check",
-    "database:generate-migration": "cd ./packages/database-core && pnpm scripts:generate-migration",
+    "database:generate-migration": "cd ./packages/database-core && pnpm scripts:generate-migration && pnpm format",
     "database:update-metadata": "cd ./packages/database-core && pnpm scripts:update-metadata",
     "dev": "cross-env NODE_ENV=development turbo dev --no-daemon --concurrency=50",
     "e2e": "cross-env NODE_ENV=test turbo e2e --no-daemon --concurrency=1",
