--- a/packages/database-core/package.json
+++ b/packages/database-core/package.json
@@ -33,9 +33,10 @@
     "drizzle-kit": "^0.20.4",
     "drizzle-orm": "^0.29.0",
     "drizzle-zod": "^0.5.1",
-    "postgres": "^3.4.3"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
+    "@types/pg": "^8.10.9",
     "typescript": "^5.3.2"
   }
 }
