--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,8 @@ jobs:
     name: Test and Benchmark
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    env:
+      LOGGER_LEVEL: error
     steps:
       - name: Git - Checkout
         uses: actions/checkout@v4
