Implemented hard delete stuff

--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -1,6 +1,8 @@
-version: "3.8"
+version: '3.8'
 
 # Here we will have all the services that are needed for the project to run
+
+name: myzenbuddy
 
 services:
   postgres:
