--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,9 +25,9 @@
     "serve": "serve ./dist --no-clipboard --single --listen tcp://127.0.0.1:4200"
   },
   "dependencies": {
+    "@moaitime/shared-common": "workspace:*",
     "@moaitime/tsconfig-config": "workspace:*",
     "@moaitime/web-core": "workspace:*",
-    "@nx/react": "17.1.3",
     "autoprefixer": "^10.4.16",
     "postcss": "8.4.21",
     "react": "18.2.0",
