--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -43,6 +43,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "express": "4.18.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
