--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -34,6 +34,7 @@
     "@moaitime/tsconfig-config": "workspace:*",
     "@moaitime/web-ui": "workspace:*",
     "clsx": "^2.0.0",
+    "colord": "^2.9.3",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "framer-motion": "^10.16.4",
