--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -44,6 +44,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "6.20.0",
+    "use-debounce": "^10.0.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
