--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -38,6 +38,7 @@
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.292.0",
     "react": "18.2.0",
     "react-confetti-explosion": "^2.1.2",
