--- a/configs/tsconfig-config/tsconfig.base.json
+++ b/configs/tsconfig-config/tsconfig.base.json
@@ -35,7 +35,8 @@
       "@moaitime/shared-common": ["../../packages/shared-common/src/index.ts"],
       "@moaitime/shared-logging": ["../../packages/shared-logging/src/index.ts"],
       "@moaitime/web-core": ["../../packages/web-core/src/index.ts"],
-      "@moaitime/web-ui": ["../../packages/web-ui/src/index.ts"]
+      "@moaitime/web-ui": ["../../packages/web-ui/src/index.ts"],
+      "@moaitime/web-ui-editor": ["../../packages/web-ui-editor/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "dist"]
