--- a/packages/web-ui-editor/package.json
+++ b/packages/web-ui-editor/package.json
@@ -11,8 +11,7 @@
         "types": "./dist/index.d.ts",
         "default": "./dist/index.js"
       }
-    },
-    "./globals.css": "./dist/index.css"
+    }
   },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -78,6 +77,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.292.0",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
