--- a/packages/web-ui-editor/package.json
+++ b/packages/web-ui-editor/package.json
@@ -54,6 +54,7 @@
     "@udecode/plate-highlight": "^28.0.0",
     "@udecode/plate-horizontal-rule": "^28.0.0",
     "@udecode/plate-indent": "^28.0.0",
+    "@udecode/plate-indent-list": "^28.0.0",
     "@udecode/plate-juice": "^28.0.0",
     "@udecode/plate-kbd": "^28.0.0",
     "@udecode/plate-line-height": "^28.0.0",
