--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -47,6 +47,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "6.20.0",
     "use-debounce": "^10.0.0",
+    "usehooks-ts": "^2.9.1",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
