Yet more work on notes, including showing of the unsaved changes

--- a/packages/web-core/package.json
+++ b/packages/web-core/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@moaitime/tailwind-config": "workspace:*",
+    "@types/lodash": "^4.14.202",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "autoprefixer": "^10.4.16",
