--- a/configs/tsconfig-config/tsconfig.base.json
+++ b/configs/tsconfig-config/tsconfig.base.json
@@ -34,9 +34,12 @@
       "@moaitime/shared-backend": ["../../packages/shared-backend/src/index.ts"],
       "@moaitime/shared-common": ["../../packages/shared-common/src/index.ts"],
       "@moaitime/shared-logging": ["../../packages/shared-logging/src/index.ts"],
+      "@moaitime/shared-queue-worker": ["../../packages/shared-queue-worker/src/index.ts"],
       "@moaitime/web-core": ["../../packages/web-core/src/index.ts"],
       "@moaitime/web-ui": ["../../packages/web-ui/src/index.ts"],
-      "@moaitime/web-ui-editor": ["../../packages/web-ui-editor/src/index.ts"]
+      "@moaitime/web-ui-editor": ["../../packages/web-ui-editor/src/index.ts"],
+      "@moaitime/bullmq": ["../../packages/bullmq/src/index.ts"],
+      "@moaitime/redis": ["../../packages/redis/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "dist"]
