--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -27,7 +27,7 @@
     "@moaitime/database-fixtures": "workspace:*",
     "@moaitime/database-seeds": "workspace:*",
     "@moaitime/database-testing": "workspace:*",
-    "@moaitime/shared-logging": "workspace:*",
+    "@moaitime/logging": "workspace:*",
     "commander": "^11.1.0"
   }
 }
