--- a/configs/tsconfig-config/tsconfig.base.json
+++ b/configs/tsconfig-config/tsconfig.base.json
@@ -33,7 +33,7 @@
       "@moaitime/emails-mailer": ["../../packages/emails-mailer/src/index.ts"],
       "@moaitime/shared-backend": ["../../packages/shared-backend/src/index.ts"],
       "@moaitime/shared-common": ["../../packages/shared-common/src/index.ts"],
-      "@moaitime/shared-logging": ["../../packages/shared-logging/src/index.ts"],
+      "@moaitime/logging": ["../../packages/logging/src/index.ts"],
       "@moaitime/shared-queue-worker": ["../../packages/shared-queue-worker/src/index.ts"],
       "@moaitime/web-core": ["../../packages/web-core/src/index.ts"],
       "@moaitime/web-ui": ["../../packages/web-ui/src/index.ts"],
