--- a/packages/database-core/package.json
+++ b/packages/database-core/package.json
@@ -27,9 +27,9 @@
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
+    "@moaitime/logging": "workspace:*",
     "@moaitime/shared-backend": "workspace:*",
     "@moaitime/shared-common": "workspace:*",
-    "@moaitime/shared-logging": "workspace:*",
     "drizzle-kit": "^0.20.4",
     "drizzle-orm": "^0.29.0",
     "postgres": "^3.4.3"
