--- a/packages/database-seeds/package.json
+++ b/packages/database-seeds/package.json
@@ -25,9 +25,9 @@
   },
   "dependencies": {
     "@moaitime/database-core": "workspace:*",
+    "@moaitime/logging": "workspace:*",
     "@moaitime/shared-backend": "workspace:*",
     "@moaitime/shared-common": "workspace:*",
-    "@moaitime/shared-logging": "workspace:*",
     "drizzle-orm": "^0.29.0"
   },
   "devDependencies": {
