--- a/packages/processes/package.json
+++ b/packages/processes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moaitime/database-services",
+  "name": "@moaitime/processes",
   "version": "0.0.0",
   "exports": {
     ".": {
@@ -21,22 +21,12 @@
     "clean": "pnpm dlx rimraf --glob node_modules --glob .turbo --glob dist",
     "dev": "tsup --watch",
     "lint": "eslint .",
-    "test": "vitest run",
     "types:generate": "tsc --emitDeclarationOnly --declaration --declarationMap --declarationDir dist"
   },
   "dependencies": {
-    "@moaitime/database-core": "workspace:*",
-    "@moaitime/database-testing": "workspace:*",
-    "@moaitime/emails-mailer": "workspace:*",
-    "@moaitime/logging": "workspace:*",
-    "@moaitime/shared-backend": "workspace:*",
-    "@moaitime/shared-common": "workspace:*",
-    "date-fns": "^2.30.0",
-    "drizzle-orm": "^0.29.0",
-    "uuid": "^9.0.1"
+    "@moaitime/logging": "workspace:*"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.7",
     "typescript": "^5.3.2"
   }
 }
